<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:androidhwext="http://schemas.android.com/apk/res/androidhwext" android:title="@string/auto_record_settings_title" android:key="record_auto_key">
    <SwitchPreference android:title="@string/auto_record_settings_title" android:key="button_record_auto_key" android:summary="@string/record_automatically_summary" android:defaultValue="false" androidhwext:preferenceID="@+id/record_settings_record_auto"/>
    <PreferenceScreen android:persistent="true" android:layout="@layout/preference_status_summary" android:title="@string/auto_record_settings" android:key="button_auto_record_object_key" android:dependency="button_record_auto_key"/>
    <PreferenceScreen android:persistent="true" android:layout="@layout/preference_status_summary" android:title="@string/user_list" android:key="button_custom_list_key" android:dependency="button_record_auto_key"/>
</PreferenceScreen>
