<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@+id/interception_create_black_dialog" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="15dp" android:layout_marginEnd="15dp">
    <EditText android:textSize="13sp" android:textColor="#d9000000" android:id="@+id/auto_record_create_phone" android:layout_width="match_parent" android:layout_height="46dp" android:layout_marginTop="15dp" android:hint="@string/autorecordFromCreatePhoneHint" android:singleLine="true" android:inputType="phone" android:imeOptions="actionNone"/>
    <EditText android:textSize="13sp" android:textColor="#d9000000" android:id="@+id/auto_record_create_name" android:layout_width="match_parent" android:layout_height="46dp" android:layout_marginTop="8dp" android:hint="@string/autorecordFromCreateNameHint" android:singleLine="true" android:imeOptions="actionNone"/>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:layout_marginBottom="12dp" android:weightSum="2">
        <Button android:textSize="14dp" android:id="@+id/auto_record_create_cancel_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" android:singleLine="true" android:layout_weight="1" android:paddingStart="4dp" android:paddingEnd="4dp"/>
        <Button android:enabled="false" android:textSize="14dp" android:id="@+id/auto_record_create_ok_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/confirm" android:singleLine="true" android:layout_weight="1" android:paddingStart="4dp" android:paddingEnd="4dp"/>
    </LinearLayout>
</LinearLayout>
